# Team_DataStructure

./: README.md
I-PARCIAL/: Operaciones_v1_Henry_Tiamba  sobrecargaOperaciones
I-PARCIAL/Deberes/: Coseno.cpp  Fecha.rar  Makefile.win  Matrix_Static.layout  Matrix_Static.rar  Operation.cpp  Operation.h  RaízCuadrada.cpp  main.cpp  operaciones.h
I-PARCIAL/Deberes/COLA/: Cola.h
I-PARCIAL/Deberes/Cubo_Magico/: Cubo.cpp  Cubo.h  Cubo_Magico.depend  Cubo_Magico.layout  Makefile.win  main.cpp
I-PARCIAL/Deberes/Diagonal_Matriz/: Diagonal_Matriz.dev  Diagonal_Matriz.layout  Matriz.cpp  Matriz.h  Operacion .h
I-PARCIAL/Deberes/Listas/: Main.cpp  Nodo.cpp
I-PARCIAL/Deberes/Matrix_Static/: Matrix_Static.dev  main.cpp
I-PARCIAL/Deberes/Matriz Estatica/: Makefile.win  Matrix_Static.dev  Matrix_Static.layout  Operation.cpp  Operation.h  main.cpp
I-PARCIAL/Deberes/Matriz_Dinamica/: MATRIZ elevada.cpp
I-PARCIAL/Deberes/Nodes/: List.cpp  List.h  Main.cbp  Main.depend  Main.layout  Node.cpp  (+2 more)
I-PARCIAL/Proyecto 1P/: Guia_Laboratorio (1).docx  Taza de amortización.docx
I-PARCIAL/Proyecto 1P/Codigo/codigo/: CMakeLists.txt  Date.cpp  DateOperations.cpp  DateOperations.h  Menu.cpp  Menu.h  OperacionesPersona.cpp  OperacionesPersona.h  Persona.cpp  Persona.h  Validar.cpp  Validar.h  Validation.cpp  main.cpp
I-PARCIAL/Proyecto/codigo/: Archivo.h  CMakeLists.txt  Date.cpp  Date.h  DateOperations.cpp  DateOperations.h  Movimientos.cpp  Movimientos.h  OperacionesAmortizacion.cpp  OperacionesAmortizacion.h  OperacionesPersona.cpp  OperacionesPersona.h  Persona.cpp  Persona.h  Validar.cpp  Validar.h  main.cpp
I-PARCIAL/Proyecto/codigo/Libreria/: ListaDoble.h  ListaSimple.h  Menu.cpp  Nodo.h  NodoDoble.h
I-PARCIAL/SobrecargaMetodos/: Makefile.win  Principal.cpp  Sobrecarga.dev  Sobrecarga.layout
I-PARCIAL/Talleres/: Plantillas.cpp
II-PARCIAL/Deberes/Notaciones/: CMakeLists.txt  Menu.cpp  Menu.h  Nodo.h  Notaciones.cpp  Notaciones.h  main.cpp
II-PARCIAL/Infija_posfija/: convierte_expresion.h  pila_arre.h  polaca.cpp
II-PARCIAL/MarquesinaMejorada/: marquesina.cpp
(+874 files in other folders)
